--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Apples and Pears</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css"/>
-    <link rel="stylesheet" type="text/css" href="style/normalize.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Here is myPair</title>
   </head>
   <body>
-    <h1>HELLO WORLD!!!!</h1>
+    <h1>Bootstrap with CDN</h1>
+    <p>In hac habitasse platea dictumst. In accumsan non mauris id dapibus. Duis volutpat, risus eget ultricies bibendum, metus turpis posuere enim, in fringilla mauris risus in arcu. Praesent semper scelerisque lacinia. Etiam varius lacinia velit congue congue. Nullam porta risus magna, id fringilla arcu porttitor rutrum. Mauris ornare odio quis egestas tempus. Mauris aliquam eros id turpis ultrices, vitae maximus eros interdum.</p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
