Uses clearfix class and responsive utility classes to solve layout issues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
         <h1>Welcome to MyPair</h1>
       </div>
     </header>
+    <div class="container">
+      <div class="row">
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle" alt="purple circle" src="styles/images/purpleCircle.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle" alt="yellow circle" src="styles/images/yellowCircle.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+        <div class="clearfix visible-sm-block"></div>
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle" alt="peach circle" src="styles/images/peachCircle.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle" alt="bumpy blue circle" src="styles/images/blueBumpy.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+        <div class="clearfix visible-sm-block"></div>
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle" alt="bumpy purple circle" src="styles/images/purpleBumpy.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+        <section class="col-sm-6 col-md-4 col-lg-2">
+          <img class="circles" title="Here is a purple circle " alt="bumpy yellow circle" src="styles/images/yellowBumpy.jpg">
+          <h3>Interesting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo orci at magna porttitor, porttitor cursus lectus tempus. Duis aliquam dignissim facilisis. Integer porta quis quam quis lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+        </section>
+      </div>
+    </div>
     <div class="row">
       <div class="container-fluid">
         <div class="col-md-4">
